# network_buffer

./: CMakeLists.txt  README.md
include/: array_backed_network_buffer.hpp  buffer.hpp  network_buffer.hpp  network_buffer_view.hpp
utest/: CMakeLists.txt  array_backed_network_buffer_test.cc  network_buffer_view_test.cc  utest.cc
